--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rove",
-  "version": "1.0.0",
-  "description": "Simple database migration cli and api for postgres",
+  "version": "1.0.1",
+  "description": "Simple database migration api and cli for postgres",
   "main": "./build/apis.js",
   "author": "Axbon",
   "license": "MIT",
@@ -18,6 +18,10 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
+  },
+  "repository": {
+    "url": "https://github.com/Axbon/rove",
+    "type": "git"
   },
   "dependencies": {
     "chalk": "^4.1.0",
