--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "rove",
-  "version": "1.0.1",
+  "name": "ts-rove",
+  "version": "1.0.2",
   "description": "Simple database migration api and cli for postgres",
   "main": "./build/apis.js",
   "author": "Axbon",
   "license": "MIT",
   "private": false,
-  "scripts":{
-    "release":"yarn publish && git push --tags"
+  "scripts": {
+    "release": "yarn publish && git push --tags"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
