--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "4.1.0",
+    "@typescript-eslint/parser": "4.1.0",
+    "eslint": "7.8.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
